force-app/main/default/objects/Product2/fields/Product_Class_Level__c.field-meta.xml
<CustomField>
    <fullName>Product_Class_Level__c</fullName>
    <label>Product Class-Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FG</fullName>
                <default>true</default>
                <label>FG</label>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>MKT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>