force-app/main/default/objects/Product2/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INACT</fullName>
                <default>true</default>
                <label>INACT</label>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>