force-app/main/default/objects/Product2/recordTypes/Tools.recordType-meta.xml
<RecordType>
    <fullName>Tools</fullName>
    <active>true</active>
    <label>Tools</label>
</RecordType>