force-app/main/default/objects/Product2/listViews/All_INACT_Product.listView-meta.xml
<ListView>
    <fullName>All_INACT_Product</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Status__c</field>
        <operation>equals</operation>
        <value>INACT</value>
    </filters>
    <label>All INACT Product</label>
</ListView>